# ds17_project_old-version

./: logo.txt  main.py  pyproject.toml  settings.json
