[tool.poetry]
name = "weatherv3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2024.1"
datetime = "^5.5"
requests = "^2.32.3"
pandas = "^2.2.2"
tzlocal = "^5.2"
timezonefinder = "^6.5.0"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
